--- a/_includes/workshop_footer.html
+++ b/_includes/workshop_footer.html
@@ -15,12 +15,14 @@
 	<a href="{{ site.lc_site }}">Library Carpentry</a>
 	{% elsif site.carpentry == "cp" %}
 	<a href="{{ site.carpentries_site }}">The Carpentries</a>
+	{% elsif site.carpentry == "cms" %}
+	<a href="{{ site.cms_site }}">The CMS Collaboration</a>
 	{% endif %}
       </h4>
     </div>
     <div class="col-md-6" align="right">
       <h4>
-	<a href="mailto:{{ site.email }}">Contact The Carpentries</a>
+	<a href="mailto:{{ site.email }}">Contact The CMS DPOA Team</a>
       </h4>
     </div>
   </div>
