--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,32 +1,51 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>Pre-exercises</h3>
+    <h5><strong>Completing the required pre-exercises makes full participation in the workshop possible! Submit <a href="https://docs.google.com/forms/d/e/1FAIpQLSfinzqqOt3tNOchikFQRoA4EYnJXuWOV1JBWTBCPnELM-86AA/viewform" target=_blank>homework responses</a> as you complete the pre-exercises.</strong></h5>
     <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
-      <tr> <td>09:00</td>  <td>Automating Tasks with the Unix Shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building Programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Building Programs with Python (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+        <tr><td width="15%">Mandatory </td><td><a href="ORIENTATION.html">Orientation</a></td></tr>
+        <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/shell-novice/">The Unix Shell</a></td></tr>
+        <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/git-novice/">Version Control with Git</a></td></tr>
+        <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td></tr>
+        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-docker">Docker containers</a></td></tr>
+        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cpp-root-python/">ROOT with C++ and Python</a></td></tr>
+        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-dataset-scouting/">Finding & using open data</a></td></tr>
+    </table>
+    <h3>Pre-Learning</h3>
+    <h5>The following concepts are important for using Open Data independently, but will not be taught live during the workshop.</h5>
+    <table class="table table-striped">
+        <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cms-detector/">Overview of the CMS detector</a></td></tr>
+        <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-physics-objects/">Physics Objects</a></td></tr>
+    </table>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>Monday July 29</h3>
+    <table class="table table-striped">
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Welcome to the IdeaSquare</a></td><td width="20%">IdeaSquare Team</td></tr>
+      <tr><td width="15%">14:30-15:15</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Introduction to CMS Open Data</a></td><td width="20%">Kati Lassila-Perini</td></tr>
+      <tr><td width="15%">15:15-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Open Discussion: Your hopes for Open Data</a></td><td width="20%"></td></tr>
+      <tr><td width="15%">16:00-16:30</td><td>Break</td><td></td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (lesson)</a></td width="20%"><td>Kati Lassila-Perini<br>Tom McCauley</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (activity)</a></td width="20%"><td>Kati Lassila-Perini<br>Tom McCauley</td></tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>Tuesday July 30</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version Control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>Version Control with Git (Continued)</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing Data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Managing Data with SQL (Continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
-      <tr> <td>16:40</td>  <td>END</td> </tr>
+      <tr><td width="15%">9:00-9:30</td><td style="background-color:#fff2cc">Hackathon Introduction</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">9:30-10:30</td><td style="background-color:#fff2cc">Hackathon project division</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">10:30-11:00</td><td>Break</td><td></td></tr>
+      <tr><td width="15%">11:00-12:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td>Julie Hogan</td></tr>
+      <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td></td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Inspiration talk: TBD</a></td><td width="20%">Tom McCauley</td></tr>
+      <tr><td width="15%">14:30-15:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">15:30-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (activity)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">16:00-16:30</td><td>Break</td><td></td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (lesson)</a></td width="20%"><td>Matt Bellis</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (activity)</a></td width="20%"><td>Matt Bellis</td></tr>
     </table>
-  </div>
+  </div>  
 </div>
