--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -14,6 +14,7 @@
     <h3>Pre-Learning</h3>
     <h5>The following concepts are important for using Open Data independently, but will not be taught live during the workshop.</h5>
     <table class="table table-striped">
+        <tr><td width="15%">Recommended (Undergraduates)</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-physics-101/">Particle Physics 101 (videos)</a></td></tr>      
         <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cms-detector/">Overview of the CMS detector</a></td></tr>
         <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-physics-objects/">Physics Objects</a></td></tr>
     </table>
@@ -27,7 +28,7 @@
       <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Welcome to the IdeaSquare</a></td><td width="20%">IdeaSquare Team</td></tr>
       <tr><td width="15%">14:30-15:15</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Introduction to CMS Open Data</a></td><td width="20%">Kati Lassila-Perini</td></tr>
       <tr><td width="15%">15:15-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Open Discussion: Your hopes for Open Data</a></td><td width="20%"></td></tr>
-      <tr><td width="15%">16:00-16:30</td><td>Break</td><td></td></tr>
+      <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (lesson)</a></td width="20%"><td>Kati Lassila-Perini<br>Tom McCauley</td></tr>
       <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (activity)</a></td width="20%"><td>Kati Lassila-Perini<br>Tom McCauley</td></tr>
     </table>
@@ -37,15 +38,48 @@
     <table class="table table-striped">
       <tr><td width="15%">9:00-9:30</td><td style="background-color:#fff2cc">Hackathon Introduction</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">9:30-10:30</td><td style="background-color:#fff2cc">Hackathon project division</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
-      <tr><td width="15%">10:30-11:00</td><td>Break</td><td></td></tr>
-      <tr><td width="15%">11:00-12:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td>Julie Hogan</td></tr>
-      <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td></td></tr>
+      <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
+      <tr><td width="15%">11:00-12:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
       <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Inspiration talk: TBD</a></td><td width="20%">Tom McCauley</td></tr>
       <tr><td width="15%">14:30-15:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
       <tr><td width="15%">15:30-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (activity)</a></td><td width="20%">Julie Hogan</td></tr>
-      <tr><td width="15%">16:00-16:30</td><td>Break</td><td></td></tr>
+      <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (lesson)</a></td width="20%"><td>Matt Bellis</td></tr>
       <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (activity)</a></td width="20%"><td>Matt Bellis</td></tr>
+    </table>
+  </div>  
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    <h3>Wednesday July 31</h3>
+    <table class="table table-striped">
+      <tr><td width="15%">9:00-10:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
+      <tr><td width="15%">11:00-12:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Inspiration talk: TBD</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">14:30-15:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">15:30-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (activity)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/">Experimental uncertainties (lesson)</a></td width="20%"><td>Julie Hogan</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/">Experimental uncertainties (activity)</a></td width="20%"><td>Julie Hogan</td></tr>
+    </table>
+  </div>
+  <div class="col-md-6">
+    <h3>Thursday Aug 1</h3>
+    <table class="table table-striped">
+      <tr><td width="15%">9:30-10:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
+      <tr><td width="15%">11:00-12:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Hackathon Progress Report</a></td><td width="20%">Xavier Tintin (TBC)</td></tr>
+      <tr><td width="15%">14:30-15:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (lesson)</a></td><td width="20%">Sezen Sekmen</td></tr>
+      <tr><td width="15%">15:30-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (activity)</a></td><td width="20%">Sezen Sekmen</td></tr>
+      <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Resources & tools for CMS Open Data</a></td width="20%"><td>Julie Hogan</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Closing discussion & survey</a></td width="20%"><td>Julie Hogan</td></tr>
     </table>
   </div>  
 </div>
