--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -25,28 +25,28 @@
   <div class="col-md-6">
     <h3>Monday July 29</h3>
     <table class="table table-striped">
-      <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Welcome to the IdeaSquare</a></td><td width="20%">IdeaSquare Team</td></tr>
-      <tr><td width="15%">14:30-15:15</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Introduction to CMS Open Data</a></td><td width="20%">Kati Lassila-Perini</td></tr>
-      <tr><td width="15%">15:15-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Open Discussion: Your hopes for Open Data</a></td><td width="20%"></td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Welcome to the IdeaSquare</a></td><td width="20%">IdeaSquare Team</td></tr>
+      <tr><td width="15%">14:30-15:15</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Introduction to CMS Open Data</a></td><td width="20%">Kati Lassila-Perini</td></tr>
+      <tr><td width="15%">15:15-16:00</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Open Discussion: Your hopes for Open Data</a></td><td width="20%"></td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (lesson)</a></td width="20%"><td>Kati Lassila-Perini<br>Tom McCauley</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (activity)</a></td width="20%"><td>Kati Lassila-Perini<br>Tom McCauley</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Tuesday July 30</h3>
     <table class="table table-striped">
-      <tr><td width="15%">9:00-9:30</td><td style="background-color:#fff2cc">Hackathon Introduction</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
-      <tr><td width="15%">9:30-10:30</td><td style="background-color:#fff2cc">Hackathon project division</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">9:00-9:30</td><td style="background-color:#e3e3e3">Hackathon Introduction</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">9:30-10:30</td><td style="background-color:#e3e3e3">Hackathon project division</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">11:00-12:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
-      <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Inspiration talk: TBD</a></td><td width="20%">Tom McCauley</td></tr>
-      <tr><td width="15%">14:30-15:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
-      <tr><td width="15%">15:30-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (activity)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Inspiration talk: TBD</a></td><td width="20%">Tom McCauley</td></tr>
+      <tr><td width="15%">14:30-15:30</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">15:30-16:00</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (activity)</a></td><td width="20%">Julie Hogan</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (lesson)</a></td width="20%"><td>Matt Bellis</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (activity)</a></td width="20%"><td>Matt Bellis</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Matt Bellis</td></tr>
     </table>
   </div>  
 </div>
@@ -55,31 +55,31 @@
   <div class="col-md-6">
     <h3>Wednesday July 31</h3>
     <table class="table table-striped">
-      <tr><td width="15%">9:00-10:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">9:00-10:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">11:00-12:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
-      <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Inspiration talk: TBD</a></td><td width="20%">Julie Hogan</td></tr>
-      <tr><td width="15%">14:30-15:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
-      <tr><td width="15%">15:30-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (activity)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Inspiration talk: TBD</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">14:30-15:30</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">15:30-16:00</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (activity)</a></td><td width="20%">Matt Bellis</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/">Experimental uncertainties (lesson)</a></td width="20%"><td>Julie Hogan</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/">Experimental uncertainties (activity)</a></td width="20%"><td>Julie Hogan</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/">Experimental uncertainties (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/">Experimental uncertainties (activity)</a></td><td width="20%">Julie Hogan</td></tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Thursday Aug 1</h3>
     <table class="table table-striped">
-      <tr><td width="15%">9:30-10:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">9:30-10:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">11:00-12:30</td><td style="background-color:#fff2cc">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
-      <tr><td width="15%">14:00-14:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Hackathon Progress Report</a></td><td width="20%">Xavier Tintin (TBC)</td></tr>
-      <tr><td width="15%">14:30-15:30</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (lesson)</a></td><td width="20%">Sezen Sekmen</td></tr>
-      <tr><td width="15%">15:30-16:00</td><td style="background-color:#f4cccc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (activity)</a></td><td width="20%">Sezen Sekmen</td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Hackathon Progress Report</a></td><td width="20%">Xavier Tintin (TBC)</td></tr>
+      <tr><td width="15%">14:30-15:30</td><td style="background-color:#cadbfc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (lesson)</a></td><td width="20%">Sezen Sekmen</td></tr>
+      <tr><td width="15%">15:30-16:00</td><td style="background-color:#cadbfc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (activity)</a></td><td width="20%">Sezen Sekmen</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fce5cd"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Resources & tools for CMS Open Data</a></td width="20%"><td>Julie Hogan</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fce5cd"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Closing discussion & survey</a></td width="20%"><td>Julie Hogan</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#e7cafc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Resources & tools for CMS Open Data</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Closing discussion & survey</a></td><td width="20%">Julie Hogan</td></tr>
     </table>
   </div>  
 </div>
