--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -25,9 +25,9 @@
   <div class="col-md-6">
     <h3>Monday July 29</h3>
     <table class="table table-striped">
-      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Welcome to the IdeaSquare</a></td><td width="20%">IdeaSquare Team</td></tr>
-      <tr><td width="15%">14:30-15:15</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Introduction to CMS Open Data</a></td><td width="20%">Kati Lassila-Perini</td></tr>
-      <tr><td width="15%">15:15-16:00</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Open Discussion: Your hopes for Open Data</a></td><td width="20%"></td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-29">Welcome to the IdeaSquare</a></td><td width="20%">IdeaSquare Team</td></tr>
+      <tr><td width="15%">14:30-15:15</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-29">Introduction to CMS Open Data</a></td><td width="20%">Kati Lassila-Perini</td></tr>
+      <tr><td width="15%">15:15-16:00</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-29">Open Discussion: Your hopes for Open Data</a></td><td width="20%"></td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">16:30-17:30</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
       <tr><td width="15%">17:30-18:00</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
@@ -41,7 +41,7 @@
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
-      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Inspiration talk: TBD</a></td><td width="20%">Tom McCauley</td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-30">Inspiration talk: TBD</a></td><td width="20%">Tom McCauley</td></tr>
       <tr><td width="15%">14:30-15:30</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
       <tr><td width="15%">15:30-16:00</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (activity)</a></td><td width="20%">Julie Hogan</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
@@ -59,7 +59,7 @@
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
-      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Inspiration talk: TBD</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-31">Inspiration talk: TBD</a></td><td width="20%">Julie Hogan</td></tr>
       <tr><td width="15%">14:30-15:30</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
       <tr><td width="15%">15:30-16:00</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (activity)</a></td><td width="20%">Matt Bellis</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
@@ -74,12 +74,12 @@
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
-      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Hackathon Progress Report</a></td><td width="20%">Xavier Tintin (TBC)</td></tr>
+      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-08-01">Hackathon Progress Report</a></td><td width="20%">Xavier Tintin (TBC)</td></tr>
       <tr><td width="15%">14:30-15:30</td><td style="background-color:#cadbfc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (lesson)</a></td><td width="20%">Sezen Sekmen</td></tr>
       <tr><td width="15%">15:30-16:00</td><td style="background-color:#cadbfc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (activity)</a></td><td width="20%">Sezen Sekmen</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#e7cafc"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Resources & tools for CMS Open Data</a></td><td width="20%">Julie Hogan</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.fnal.gov/event/58914/timetable/">Closing discussion & survey</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#e7cafc"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-08-01">Resources & tools for CMS Open Data</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-08-01">Closing discussion & survey</a></td><td width="20%">Julie Hogan</td></tr>
     </table>
   </div>  
 </div>
