schedule: fix HW link & point to instructor lesson views

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,22 +1,22 @@
 <div class="row">
   <div class="col-md-6">
     <h3>Pre-exercises</h3>
-    <h5><strong>Completing the required pre-exercises makes full participation in the workshop possible! Submit <a href="https://docs.google.com/forms/d/e/1FAIpQLSfinzqqOt3tNOchikFQRoA4EYnJXuWOV1JBWTBCPnELM-86AA/viewform" target=_blank>homework responses</a> as you complete the pre-exercises.</strong></h5>
+    <h5><strong>Completing the required pre-exercises makes full participation in the workshop possible! Submit <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxsc-aIWqUyFA0qTsnbfQrA6wROtAxC5Id4sxH08STTl8e5w/viewform" target=_blank>homework responses</a> as you complete the pre-exercises.</strong></h5>
     <table class="table table-striped">
         <tr><td width="15%">Mandatory </td><td><a href="ORIENTATION.html">Orientation</a></td></tr>
         <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/shell-novice/">The Unix Shell</a></td></tr>
         <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/git-novice/">Version Control with Git</a></td></tr>
         <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td></tr>
-        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-docker">Docker containers</a></td></tr>
-        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cpp-root-python/">ROOT with C++ and Python</a></td></tr>
-        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-dataset-scouting/">Finding & using open data</a></td></tr>
+        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-docker/instructor/index.html">Docker containers</a></td></tr>
+        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cpp-root-python/instructor/index.html">ROOT with C++ and Python</a></td></tr>
+        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-dataset-scouting/instructor/index.html">Finding & using open data</a></td></tr>
     </table>
     <h3>Pre-Learning</h3>
     <h5>The following concepts are important for using Open Data independently, but will not be taught live during the workshop.</h5>
     <table class="table table-striped">
-        <tr><td width="15%">Recommended (Undergraduates)</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-physics-101/">Particle Physics 101 (videos)</a></td></tr>      
-        <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cms-detector/">Overview of the CMS detector</a></td></tr>
-        <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-physics-objects/">Physics Objects</a></td></tr>
+        <tr><td width="15%">Recommended (Undergraduates)</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-physics-101/instructor/index.html">Particle Physics 101 (videos)</a></td></tr>      
+        <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cms-detector/instructor/index.html">Overview of the CMS detector</a></td></tr>
+        <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-physics-objects/instructor/index.html">Physics Objects</a></td></tr>
     </table>
   </div>
 </div>
@@ -29,8 +29,8 @@
       <tr><td width="15%">14:30-15:15</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-29">Introduction to CMS Open Data</a></td><td width="20%">Kati Lassila-Perini</td></tr>
       <tr><td width="15%">15:15-16:00</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-29">Open Discussion: Your hopes for Open Data</a></td><td width="20%"></td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/instructor/index.html">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/instructor/index.html">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -42,11 +42,11 @@
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
       <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-30">Inspiration talk: TBD</a></td><td width="20%">Tom McCauley</td></tr>
-      <tr><td width="15%">14:30-15:30</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
-      <tr><td width="15%">15:30-16:00</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/">Triggers & Luminosity (activity)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">14:30-15:30</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/instructor/index.html">Triggers & Luminosity (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">15:30-16:00</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/instructor/index.html">Triggers & Luminosity (activity)</a></td><td width="20%">Julie Hogan</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/instructor/index.html">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/instructor/index.html">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Matt Bellis</td></tr>
     </table>
   </div>  
 </div>
@@ -60,11 +60,11 @@
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
       <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-31">Inspiration talk: TBD</a></td><td width="20%">Julie Hogan</td></tr>
-      <tr><td width="15%">14:30-15:30</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
-      <tr><td width="15%">15:30-16:00</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/">Background modeling (activity)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">14:30-15:30</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/instructor/index.html">Background modeling (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">15:30-16:00</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/instructor/index.html">Background modeling (activity)</a></td><td width="20%">Matt Bellis</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/">Experimental uncertainties (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/">Experimental uncertainties (activity)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/instructor/index.html">Experimental uncertainties (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/instructor/index.html">Experimental uncertainties (activity)</a></td><td width="20%">Julie Hogan</td></tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -75,8 +75,8 @@
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
       <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-08-01">Hackathon Progress Report</a></td><td width="20%">Xavier Tintin (TBC)</td></tr>
-      <tr><td width="15%">14:30-15:30</td><td style="background-color:#cadbfc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (lesson)</a></td><td width="20%">Sezen Sekmen</td></tr>
-      <tr><td width="15%">15:30-16:00</td><td style="background-color:#cadbfc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/">Statistical Inference (activity)</a></td><td width="20%">Sezen Sekmen</td></tr>
+      <tr><td width="15%">14:30-15:30</td><td style="background-color:#cadbfc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/instructor/index.html">Statistical Inference (lesson)</a></td><td width="20%">Sezen Sekmen</td></tr>
+      <tr><td width="15%">15:30-16:00</td><td style="background-color:#cadbfc"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-statistical-inference/instructor/index.html">Statistical Inference (activity)</a></td><td width="20%">Sezen Sekmen</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">16:30-17:30</td><td style="background-color:#e7cafc"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-08-01">Resources & tools for CMS Open Data</a></td><td width="20%">Julie Hogan</td></tr>
       <tr><td width="15%">17:30-18:00</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-08-01">Closing discussion & survey</a></td><td width="20%">Julie Hogan</td></tr>
