update primer website

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -8,13 +8,13 @@
         <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/git-novice/">Version Control with Git</a></td></tr>
         <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td></tr>
         <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-docker/instructor/index.html">Docker containers</a></td></tr>
-        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cpp-root-python/instructor/index.html">ROOT with C++ and Python</a></td></tr>
+        <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cpp-root-python/instructor/index.html">Open Data analysis in C++ and Python</a></td></tr>
         <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-dataset-scouting/instructor/index.html">Finding & using open data</a></td></tr>
     </table>
     <h3>Pre-Learning</h3>
     <h5>The following concepts are important for using Open Data independently, but will not be taught live during the workshop.</h5>
     <table class="table table-striped">
-        <tr><td width="15%">Recommended (Undergraduates)</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-physics-101/instructor/index.html">Particle Physics 101 (videos)</a></td></tr>      
+        <tr><td width="15%">Recommended (Undergraduates)</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-particle-physics-primer/instructor/index.html">Particle Physics Primer</a></td></tr>      
         <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-cms-detector/instructor/index.html">Overview of the CMS detector</a></td></tr>
         <tr><td width="15%">Recommended</td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-physics-objects/instructor/index.html">Physics Objects</a></td></tr>
     </table>
