text tweaks (closes #1)

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -4,7 +4,7 @@
     <h5><strong>Completing the required pre-exercises makes full participation in the workshop possible! Submit <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxsc-aIWqUyFA0qTsnbfQrA6wROtAxC5Id4sxH08STTl8e5w/viewform" target=_blank>homework responses</a> as you complete the pre-exercises.</strong></h5>
     <table class="table table-striped">
         <tr><td width="15%">Mandatory </td><td><a href="ORIENTATION.html">Orientation</a></td></tr>
-        <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/shell-novice/">The Unix Shell</a></td></tr>
+        <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/shell-novice/">The Unix Shell<br>(Windows users: skip [install software](https://swcarpentry.github.io/shell-novice/#install-software) and follow the "advanced users" instructions to [open a shell](https://swcarpentry.github.io/shell-novice/#open-a-new-shell))</a></td></tr>
         <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/git-novice/">Version Control with Git</a></td></tr>
         <tr><td width="15%">Optional (external lesson)</td><td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python</a></td></tr>
         <tr><td width="15%">Mandatory </td><td><a href="https://cms-opendata-workshop.github.io/workshop2024-lesson-docker/instructor/index.html">Docker containers</a></td></tr>
