--- a/_includes/swc/intro.html
+++ b/_includes/swc/intro.html
@@ -1,7 +1,7 @@
 <p>
   Since 2014, the CMS Collaboration has pioneered the release of LHC research quality data for public
   use by making a significant amount of these data accessible through the CERN Open Data portal.  
-  In April 2024, the CMS Collaboration released the first batch of "ultra-legacy" Run 2 data in the NanoAOD format.
+  In April 2024, the CMS Collaboration released the first batch of Run 2 data in the NanoAOD format.
   This workshop aims to bridge the technical gap that usually exists between the scientific creativity of an external 
   analyst and the nuts-and-bolts details of a full analysis with CMS open data.
   All exercises will be hands-on and participants should be prepared to dive into 
