--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -29,8 +29,8 @@
       <tr><td width="15%">14:30-15:15</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-29">Introduction to CMS Open Data</a></td><td width="20%">Kati Lassila-Perini</td></tr>
       <tr><td width="15%">15:15-16:00</td><td style="background-color:#fcdfca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-29">Open Discussion: Your hopes for Open Data</a></td><td width="20%"></td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/instructor/index.html">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-nanoaod/instructor/index.html">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-exploring-cms-nanoaod/instructor/index.html">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#fcf0ca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-exploring-cms-nanoaod/instructor/index.html">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Kati Lassila-Perini<br>Tom McCauley</td></tr>
     </table>
   </div>
   <div class="col-md-6">
@@ -45,8 +45,8 @@
       <tr><td width="15%">14:30-15:30</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/instructor/index.html">Triggers & Luminosity (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
       <tr><td width="15%">15:30-16:00</td><td style="background-color:#fcfbca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-trigger-lumi/instructor/index.html">Triggers & Luminosity (activity)</a></td><td width="20%">Julie Hogan</td></tr>
       <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/instructor/index.html">Exploring CMS NanoAOD (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/instructor/index.html">Exploring CMS NanoAOD (activity)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">16:30-17:30</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/instructor/index.html">Event Selection (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">17:30-18:00</td><td style="background-color:#e1fcca"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-event-selection/instructor/index.html">Event Selection (activity)</a></td><td width="20%">Matt Bellis</td></tr>
     </table>
   </div>  
 </div>
@@ -59,12 +59,11 @@
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">11:00-11:20</td><td>Lunch</td><td width="20%"></td></tr>
-      <tr><td width="15%">14:00-14:30</td><td style="background-color:#fccaca"><a style="color:black" href="https://indico.cern.ch/event/1387505/timetable/#day-2024-07-31">Inspiration talk: TBD</a></td><td width="20%">Julie Hogan</td></tr>
-      <tr><td width="15%">14:30-15:30</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/instructor/index.html">Background modeling (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
-      <tr><td width="15%">15:30-16:00</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-backgrounds/instructor/index.html">Background modeling (activity)</a></td><td width="20%">Matt Bellis</td></tr>
-      <tr><td width="15%">16:00-16:30</td><td>Break</td><td width="20%"></td></tr>
-      <tr><td width="15%">16:30-17:30</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/instructor/index.html">Experimental uncertainties (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
-      <tr><td width="15%">17:30-18:00</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/instructor/index.html">Experimental uncertainties (activity)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">14:00-15:00</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-background-modeling/instructor/index.html">Background modeling (lesson)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">15:00-15:45</td><td style="background-color:#cafce8"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-background-modeling/instructor/index.html">Background modeling (activity)</a></td><td width="20%">Matt Bellis</td></tr>
+      <tr><td width="15%">15:45-16:15</td><td>Break</td><td width="20%"></td></tr>
+      <tr><td width="15%">16:15-17:15</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/instructor/index.html">Experimental uncertainties (lesson)</a></td><td width="20%">Julie Hogan</td></tr>
+      <tr><td width="15%">17:15-18:00</td><td style="background-color:#cafcf9"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-uncertainties/instructor/index.html">Experimental uncertainties (activity)</a></td><td width="20%">Julie Hogan</td></tr>
     </table>
   </div>
   <div class="col-md-6">
