--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -37,7 +37,7 @@
     <h3>Tuesday July 30</h3>
     <table class="table table-striped">
       <tr><td width="15%">9:00-9:30</td><td style="background-color:#e3e3e3">Hackathon Introduction</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
-      <tr><td width="15%">9:30-10:30</td><td style="background-color:#e3e3e3">Hackathon project division</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">9:30-10:30</td><td style="background-color:#e3e3e3"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-remote-hackathon/index.html">Hackathon project division</a></td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">12:30-14:00</td><td>Lunch</td><td width="20%"></td></tr>
@@ -55,7 +55,7 @@
   <div class="col-md-6">
     <h3>Wednesday July 31</h3>
     <table class="table table-striped">
-      <tr><td width="15%">9:00-10:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">9:00-10:30</td><td style="background-color:#e3e3e3"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-remote-hackathon/index.html">Hackathon working period</a></td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">12:30-14:00</td><td>Lunch</td><td width="20%"></td></tr>
@@ -69,7 +69,7 @@
   <div class="col-md-6">
     <h3>Thursday Aug 1</h3>
     <table class="table table-striped">
-      <tr><td width="15%">9:30-10:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
+      <tr><td width="15%">9:30-10:30</td><td style="background-color:#e3e3e3"><a style="color:black" href="https://cms-opendata-workshop.github.io/workshop2024-lesson-remote-hackathon/index.html">Hackathon working period</a></td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">10:30-11:00</td><td>Break</td><td width="20%"></td></tr>
       <tr><td width="15%">11:00-12:30</td><td style="background-color:#e3e3e3">Hackathon working period</td><td width="20%">Julie Hogan<br>Xavier Tintin</td></tr>
       <tr><td width="15%">12:30-14:00</td><td>Lunch</td><td width="20%"></td></tr>
